# nerva-rowwise

./: CITATION.cff  CMakeLists.txt  Jamroot  README.md  nerva-c++.html  nerva-python.html
.github/workflows/: deploy-docs.yml  deploy-latex.yml
doc/: bibliography.bib  nerva-c++.adoc  nerva-c++.html  nerva-cpp.adoc  nerva-cpp.html  nerva-libraries-implementation.tex  nerva-library-specifications.tex  nerva-python.adoc  nerva-python.html  nerva.bib
examples/: CMakeLists.txt  cifar10_debug.sh  cifar10_dense.sh  cifar10_dense_python.sh  cifar10_sparse.sh  cifar10_sparse_python.sh  doc_mlp_python.sh  doc_mpl.sh  mkl_slow_product.cpp  mnist_dense.sh  mnist_dense_python.sh  mnist_sparse.sh  mnist_sparse_python.sh
include/nerva/datasets/: cifar10reader.h  dataset.h  generate_dataset.h  make_dataset.h  mnistreader.h
include/nerva/neural_networks/: activation_functions.h  batch_normalization_layers.h  dropout_layers.h  eigen.h  grow.h  layers.h  learning_rate_schedulers.h  loss_functions.h  mlp_algorithms.h  parse_layer.h  prune.h  signal_handling.h  softmax_functions.h  training.h
include/nerva/utilities/: timer.h
python/: setup.py
python/nerva/: datasets.py  layers.py  learning_rate_schedulers.py  loss_functions.py  multilayer_perceptron.py  training.py  utilities.py
python/tests/: loss_function_test.py  multilayer_perceptron_test.py
python/tools/: generate_cifar10_augmented_datasets.py  mlp.py
scripts/: build_asciidoc_documentation.sh  build_latex_documentation.sh  checkerboard.sh  chessboard.sh  cifar10.sh  cifar10python.sh
src/: python-bindings.cpp
tests/: CMakeLists.txt  Jamfile  dataset_view_test.cpp  eigen_test.cpp  gradient_test.cpp  layer_test.cpp  loss_function_test.cpp  multilayer_perceptron_test.cpp  test-mlp-loss-functions.sh  test-mlp-options.sh
tools/: CMakeLists.txt  Jamfile  inspect_npz.cpp  mkl.cpp  mlp.cpp
